--- a/Views/FileUpload/Index.cshtml
+++ b/Views/FileUpload/Index.cshtml
@@ -1,48 +1,4 @@
 ﻿<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head runat="server">
-    <title>Read text fileusing asp.net MVC</title>
-    <style type="text/css">
-        .btn {
-            width: 100px;
-            height: 50px;
-            background: #00BCD4;
-            border-style: solid;
-            border-color: white;
-            color: white;
-        }
-    </style>
-</head>
-
-<body style="border: 1px solid #DED8D8; width: 500px; height: 300px; font-family: Arial; margin-left: 50px">
-    @using (@Html.BeginForm("upload", "fileUpload", FormMethod.Post,
-     new { enctype = "multipart/form-data" }))
-    {
-        if (TempData["Message"] != null)
-        {
-            <p style="font-family: Arial; font-size: 16px; font-weight: 200; color: red">@TempData["Message"]</p>
-        }
-        <table>
-            <tr>
-                <td style="padding-bottom: 35px" colspan="2">
-                    <h2 style="color: #FF5722">Read text file using asp.net MVC</h2>
-                </td>
-            </tr>
-            <tr>
-                <td style="width: 200px;">
-                    <b style="color: #FF5722">choose Text file:</b>
-                </td>
-                <td>
-                    <input type="file" name="file" id="file" />
-                </td>
-            </tr>
-            <tr>
-                <td>&nbsp;</td>
-                <td colspan="2" style="padding-top: 30px">
-                    <input type="submit" class="btn" value="Read Text" name="submit" />
-                </td>
-            </tr>
-        </table>
-    }
-</body>
-</html>
+<div>
+    <b>Index Page</b>
+</div>
